--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "silent-watch",
   "version": "0.1.0",
-  "description": "Universal client-side silent failure detector with resilience and safety.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/types/index.d.ts",
-  "type": "module",
+  "main": "dist/watcher.cjs.js",
+  "module": "dist/watcher.esm.js",
+  "unpkg": "dist/watcher.umd.js",
+  "types": "dist/types/core/watcher.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/types/index.d.ts"
-    }
+    "import": "./dist/watcher.esm.js",
+    "require": "./dist/watcher.cjs.js"
   },
-  "files": ["dist"],
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "rollup -c",
-    "prepare": "npm run build"
+    "build": "rollup -c"
   },
-  "keywords": ["monitoring", "silent-failure", "observability", "frontend"],
-  "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "silent failures",
+    "ui monitoring",
+    "workflow detection",
+    "frontend tool"
+  ],
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "rollup": "^3.0.0",
-    "rimraf": "^5.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "rollup": "^2.79.2",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.0.0"
   }
 }
