--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,27 @@
 {
-  "name": "backend",
+  "name": "silent-watch-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend server for the SilentWatch package to receive and store UI silent failure logs.",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "silent-watch",
+    "logging-backend",
+    "express",
+    "ui-monitoring",
+    "event-logger"
+  ],
+  "author": "Hashida Sherin",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
